Migrate clean code from old repo